2010-02-03  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Update stats.

	* dllwrapper/wine/Makefile.am:
	  Remove obsolete comment.

	* dllwrapper/wine/pe_image.c:
	* dllwrapper/wine/stubs.s:
	  Formatting.

	* tests/testmachine.sh:
	  Fix example.

2010-01-22  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/debugtools.h:
	* src/bml.c:
	  Fix the build for --disable-debug.

2010-01-13  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* dllwrapper/wine/debugtools.h:
	* dllwrapper/wine/module.c:
	* dllwrapper/wine/registry.c:
	* dllwrapper/wine/win32.c:
	* src/bml.c:
	* tests/testmachine.sh:
	  Turn BLM_DEBUG envvar into flag based for more finegrained log control.
	  Have also filename:lineno on bml debug logs.

2010-01-12  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/debugtools.h:
	* dllwrapper/wine/ldt_keeper.c:
	* dllwrapper/wine/module.c:
	* dllwrapper/wine/pe_image.c:
	* dllwrapper/wine/registry.c:
	* src/bml.c:
	  Add a custom logger, that also prints timestamps. Small cleanups and
	  fixmes.

2009-11-01  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_info.c:
	* src/bmltest_info.h:
	* tests/testmachine.sh:
	  Print creating and init time. Add to testmachine script.

2009-11-01  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* configure.ac:
	* dllwrapper/wine/elfdll.c:
	  Add configure checks for thing uses conditionally in dllwrapper.

2009-10-28  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_process.c:
	* src/bmltest_process.h:
	* tests/testmachine.sh:
	  Add denormal detection to tests.

2009-09-06  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Back to development.
	  
=== release 0.5.0 ===

2009-09-05  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	  Update NEWS.

2009-06-26  Krzysztof Foltman  <kfoltman@users.sf.net>

	* dllwrapper/wine/win32.c:
	  Fix gcc 4.4 compile error.

2009-06-04  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  Rebuild for API changes.

	* src/bmltest_info.h: